[gd_scene load_steps=2 format=3 uid="uid://ppw6dbdqbugn"]

[ext_resource type="Script" uid="uid://w0onux8jtfyw" path="res://Scripts/test/test_weapon.gd" id="1_script"]

[node name="TestWeapon" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.1, 0.12, 0.15, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="ScrollContainer" parent="UI"]
offset_right = 1920.0
offset_bottom = 60.0

[node name="WeaponButtons" type="HBoxContainer" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="BottomBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="UI/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedSlider" type="HSlider" parent="UI/BottomBar"]
layout_mode = 0
offset_left = 120.0
offset_top = 25.0
offset_right = 500.0
offset_bottom = 55.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="SpeedLabel" type="Label" parent="UI/BottomBar"]
layout_mode = 0
offset_left = 520.0
offset_top = 25.0
offset_right = 700.0
offset_bottom = 55.0
text = "速度: 1.00x"

[node name="SpeedTitle" type="Label" parent="UI/BottomBar"]
layout_mode = 0
offset_left = 20.0
offset_top = 25.0
offset_right = 110.0
offset_bottom = 55.0
text = "游戏速度:"

[node name="WeaponInfo" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 80.0
offset_right = 500.0
offset_bottom = 250.0
text = "武器信息"

[node name="CenterMarker" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="WeaponHolder" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="TargetContainer" type="Node2D" parent="."]
position = Vector2(960, 540)
